<resources>
    <string name="app_name">Olmatix 2.0</string>
    <string name="setting">Setting</string>
    <string name="connect_server">Connected to Olmatix Server</string>
    <string name="default_auto_connect">Default (automatically connect on start up)</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="user_name">User Name</string>
    <string name="client_id">Client ID</string>
    <string name="metrics_columns_count_0_auto">Metrics columns count (0 - auto)</string>
    <string name="user_password">User password</string>

    <string name="connection_connected_to">Connected to</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occured connecting to</string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name='connection_dateFormat'>dd/MM/yy \'at\' HH:mm:ss</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="notifyTitle">Olmatix Message Received</string>
    <string name="network">Network</string>
    <string name="notifications">Notifications</string>
    <string name="olmatix_2_0">Olmatix 2.0</string>
    <string name="olmatix_2016">by lesjaw@olmatix.com - Indonesia - 2016</string>
    <string name="server_connection">Enable Server Connection</string>
    <string name="server_domain">Server Domain</string>
    <string name="port_number">Port Number</string>
    <string name="password">Password</string>
    <string name="add_connection_general_label">General</string>
    <string name="add_connection_client_id_label">Client ID</string>
    <string name="add_connection_client_id_default">AndroidClient</string>
    <string name="add_connection_server_label">Server</string>
    <string name="add_connection_server_default">cloud.olmatix.com</string>
    <string name="add_connection_port_label">Port</string>
    <string name="add_connection_port_default">1883</string>
    <string name="add_connection_port_title">Enter Server port</string>
    <string name="add_connection_clean_session_label">Clean Session</string>
    <string name="add_connection_advanced_label">Advanced</string>
    <string name="add_connection_tls_server_key_label">Server TLS Key</string>
    <string name="add_connection_tls_client_key_label">Client TLS Key</string>
    <string name="add_connection_timeout_label">Timeout</string>
    <string name="add_connection_timeout_default">60</string>
    <string name="add_connection_keepalive_label">Keepalive</string>
    <string name="add_connection_keepalive_default">200</string>
    <string name="add_connection_lwt_retain_label">Retain</string>
    <string name="add_connection_lwt_qos_label">QoS</string>
    <string name="add_connection_lwt_message_label">Message</string>
    <string name="add_connection_lwt_topic_label">Topic</string>
    <string name="add_connection_lwt_label">Last Will &amp; Testament</string>
    <string-array name="qos_options">
        <item name="qos_0">0</item>
        <item name="qos_1">1</item>
        <item name="qos_2">2</item>
    </string-array>

    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="action_add_connection">Add Connection</string>
    <string name="Connection">Connection</string>
    <string name="subscription_new">New Subscription</string>
    <string name="qos_text" >QoS: %1$s</string>
    <string name="topic_label">Topic</string>
    <string name="notify_text">Notifications: %1$s</string>
    <string name="enabled">Enabled</string>
    <string name="notify_label">Show Notifications</string>
    <string name="subscribe_ok">Ok</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="Subscribe">Subscribe</string>
    <string name="disabled">Disabled</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="manage_title">Manage Connection</string>
    <string name="manage_delete">Delete Connection</string>
    <string name="manage_edit">Edit Connection</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>

</resources>
