<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fillViewport="true"
    android:isScrollContainer="true"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/autoConnectCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/default_auto_connect" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/nameEditText"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/address"
            />

        <EditText
            android:id="@+id/addressEditText"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/portTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/port" />

        <EditText
            android:ems="10"
            android:id="@+id/portEditText"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/userTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/user_name"
            />

        <EditText
            android:id="@+id/userEditText"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/user_password"
            />

        <EditText
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/clientIdTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/client_id"
            />

        <EditText
            android:id="@+id/clientIdEditText"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/colsCountTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/metrics_columns_count_0_auto"
            />

        <EditText
            android:ems="10"
            android:enabled="true"
            android:gravity="center"
            android:id="@+id/colsCountEditText"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="50dp" />
    </LinearLayout>
</ScrollView>
