<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/lin_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_network"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_18"
            android:layout_marginLeft="@dimen/dp_10"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lin_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_notification"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="@dimen/text_18"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/dp_10"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lin_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"

        >

        <ImageView
            android:layout_width="22dp"
            android:layout_height="33dp"
            android:src="@mipmap/olmatixlogo"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olmatix_2_0"
            android:textColor="@color/colorAccent"

            android:textSize="@dimen/text_18"
            android:layout_marginLeft="@dimen/dp_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olmatix_2016"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_14"
                android:layout_marginLeft="@dimen/dp_10"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>



</LinearLayout>