<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15">

        <LinearLayout
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/sw_connect">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_connection"
            android:textSize="@dimen/text_18"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/txt_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_connection"
                android:textSize="@dimen/text_14"
                android:layout_marginLeft="@dimen/dp_10"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <Switch
            android:id="@+id/sw_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lin_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_domain"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_18"
                android:layout_marginLeft="@dimen/dp_10"/>

            <TextView
                android:id="@+id/txt_domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olmatix_2016"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_14"
                android:layout_marginLeft="@dimen/dp_10"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lin_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_number"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_18"
            android:layout_marginLeft="@dimen/dp_10"/>

        <TextView
            android:id="@+id/txt_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olmatix_2016"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_14"
            android:layout_marginLeft="@dimen/dp_10"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_18"
            android:layout_marginLeft="@dimen/dp_10"/>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olmatix_2016"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_14"
            android:layout_marginLeft="@dimen/dp_10"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/lin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_18"
            android:layout_marginLeft="@dimen/dp_10"/>

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olmatix_2016"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_14"
            android:layout_marginLeft="@dimen/dp_10"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorAccent"/>

</LinearLayout>